2008-11-06  Wenji Huang  <wenji.huang@oracle.com>

	PR 6998
	* tapsets.cxx (profile_builder): Add default kernel symbols to profile.

2008-11-06  Stan Cox  <scox@redhat.com>

	* tapsets.cxx (dwflpp::module_address_to_global): 
	ET_EXEC needs no further relocation.

2008-11-04  Frank Ch. Eigler  <fche@elastic.org>

	From Masami Hiramatsu <mhiramat@redhat.com>, PR 6028.
	* tapsets.cxx (dwarf_derived_probe): New field access_vars, for
	tracking result from ..
	(dwarf_var_expanding_copy_visitor): Collect a flag about whether
	any $expressions appear within.
	(emit_probe_local_init): ... and run ia64 bspcache() on if true.

2008-11-03  Jim Keniston  <jkenisto@us.ibm.com>

	Add a version of uprobes that works with the 2.6.27 version of utrace.
	* runtime/uprobes2/uprobes.[ch]: uprobes2
	* runtime/uprobes2/uprobes_x86.[ch]: Simplified to use post-2.6.24
	unified pt_regs names ("ax" rather than "eax" or "rax").
	* runtime/uprobes2/uprobes_arch.[ch]: Pull in the arch-specific
	file from the appropriate directory.
	* runtime/uprobes/uprobes.[ch]: #ifdef added to pull in file from
	../uprobes2 if we're running the new utrace.
	* runtime/uprobes/Makefile: Updated
	* Makefile.am: Install runtime/uprobes2/*.
	* Makefile.in: Regenerated
	* buildrun.cxx: Always copy uprobes's Module.symvers into the
	directory where stap builds the script .ko.

2008-11-03  Mark Wielaard  <mjw@redhat.com>

	* tapsets.cxx (literal_stmt_for_return): Add function name and file
	to semantic error messages.
	
2008-10-29  Frank Ch. Eigler  <fche@elastic.org>

	* translate.cxx (dump_unwindsyms): Work on CONFIG_RELOCATABLE=n
	kernels, or for whatever other scenarios dwfl_module_relocation_info
	might return NULL.

2008-10-27  Josh Stone  <joshua.i.stone@intel.com>

	* translate.cxx (c_unparser::visit_print_format): Fix the argument passed
	for printf %c formats.

2008-10-27  Rajan Arora  <rarora@redhat.com>

	* elaborate.cxx (add_global_var_display): Added check for globals
	from tapsets.
